crates/tui/snapshots/fullscreen/modal/provider_parent_restores_config.snap
---
source: crates/tui/src/app/fullscreen/modal_tests.rs
expression: trimmed
---
  .                                                                                    [Dashboard]

  ╭──────────────────────────────────────────────────────────────────────────────────────────────╮
  │         ┌── Config ───────────────────────────────────────────────────────────[✗]─┐          │
  │    ▄  ▄ │                                                                         │          │
  │  ▗█▛██▜█│   General    Providers    Issues    Network                             │          │
  │  ▝▜████▛│                                                                         │          │
  │    ▝  ▘ │  ╭────────────────────────────────────────────────────────────────────╮ │          │
  │         │  │ Search configuration                                               │ │          │
  │         │  ╰────────────────────────────────────────────────────────────────────╯ │          │
  │         │  API ────────────────────────────────────────────────────────────────── │          │
  │         │> New custom provider                                                    │          │
  │         │                                                                         │          │
  │         │                                                                         │          │
  ╰─────────│                                                                         │──────────╯
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
  ──────────└─────────────────────────────────────────────────────────────────────────┘───────────
  > Build anything
  ─────────────────────────────────────────────────────────────────────────────── Automatic model

  Enter/Space change · Tab tabs · / search · Esc close
