crates/tui/snapshots/fullscreen/modal/short_modal_page_hintline.snap
---
source: crates/tui/src/app/fullscreen/modal_tests.rs
expression: text
---
┌── Config ────[✗]─┐
│                  │
└──────────────────┘
  Esc close
