crates/tui/snapshots/fullscreen/modal/status_modal_processes.snap
---
source: crates/tui/src/app/fullscreen/modal_tests.rs
expression: frame_text(&app)
---
  .                                                                                    [Dashboard]  
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
            ┌── Session status ───────────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │   Session    Diagnostics                                                │             
            │                                                                         │             
            │  Total:              collecting                                         │             
            │  TUI:                collecting                                         │             
            │  App Server:         included in the TUI process                        │             
            │  Memory diagnostics: Disabled                                           │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            └─────────────────────────────────────────────────────────────────────────┘             
                                                                                                    
                                                                                                    
  ────────────────────────────────────────────────────────────────────────────────────────────────  
  > Build anything                                                                                  
  ─────────────────────────────────────────────────────────────────────────────── Automatic model   
                                                                                                    
  Tab tabs · ↑/↓ scroll · Esc close
